src/components/Pages/Leaderboards/LeaderBoard/LeaderBoardTBody/TopsVisualization/TopStatBar/TopStatBar.module.scss
@use "@/styles/mixins" as m;

.statBarWrapper {
  height: 64px;
  width: 38px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  position: relative;
}

.statBarWrapper .toolTip {
  position: absolute;
  left: 50%;
  translate: -50%;
  top: -32px;
  background-color: #111827;
  color: #fff;
  font-weight: 400;
  font-size: .75rem;
  line-height: 1rem;
  padding: .25rem;
  border-radius: .25rem;
  white-space: nowrap;
  z-index: 11;
  opacity: 0;
  pointer-events: none;
  transition: opacity .2s ease;
}

@include m.small {
  .statBarWrapper .toolTip {
    display: none;
  }
}

.statBarWrapper:hover .toolTip {
  opacity: 1;
  pointer-events: all;
}

.statBarWrapper :where(.top, .times) {
  --text-border-color: #1d1d1d;
  color: #fff;
  font-size: .75rem;
  font-weight: bolder !important;
  position: absolute;
  left: 50%;
  translate: -50% 0;
  z-index: 1;
  text-shadow:
    -1px -1px 0 var(--text-border-color),
    1px -1px 0 var(--text-border-color),
    -1px 1px 0 var(--text-border-color),
    -1px 0 0 var(--text-border-color),
    0 -1px 0 var(--text-border-color),
    0 1px 0 var(--text-border-color),
    1px 0 0 var(--text-border-color),
    1px 1px 0 var(--text-border-color);
}

.statBarWrapper .top {
  font-weight: 500;
  top: .25rem;
}

.statBarWrapper .times {
  font-weight: 700;
  bottom: .25rem;
}

.statBarWrapper .statBar {
  background-color: #3e98c7;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  border-radius: .1rem;
  opacity: .8;
}

.statBarWrapper:hover .statBar {
  opacity: 1;
}

